Updated QR Code to point to live GitHub Pages URL

--- a/cartao-apresentacao.html
+++ b/cartao-apresentacao.html
@@ -484,8 +484,8 @@
             </ul>
           </div>
           <div class="qr-section">
-            <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://rtechai.com.br&size=100x100" alt="QR Code para mais informações">
-            <div class="qr-caption">Aponte a câmera para saber mais</div>
+            <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://rogerio-antonio.github.io/meu-cartao-digital/&size=100x100" alt="QR Code com meus contatos">
+            <div class="qr-caption">Aponte a câmera para meus contatos!</div>
           </div>
         </div>
 
